# rust-zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
