[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dylan Ullrich <dylan@eldyl.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
